feat :sparkles: Add modal perfil

--- a/main.html
+++ b/main.html
@@ -52,7 +52,7 @@
         <div class="imgs">
             <a href="#"><img class="setting" src="./sources/svg/Icon ionic-ios-settings.svg" alt="icon"></a>
             <a href="#"><img class="notifi" src="./sources/svg/Icon material-notifications-active.svg" alt="icon"></a>
-            <a href="#"><img class="perfil" src="./sources/img/pp@2x.png" alt="icon"></a>
+            <a href="#perfil"><img class="perfil" src="./sources/img/pp@2x.png" alt="icon"></a>
         </div>
     </header>
     <main>
@@ -568,9 +568,33 @@
                 </nav>
         </div>
     </div>
-
-
-
+    <div class="modal_general" id="perfil">
+        <div class="modal_perfil">
+            <div class="modal_header">
+                <div class="perfil2">
+                    <div class="indice_header">
+                        <p>Perfil</p>
+                        <a href="#" class="cerrar_modal">&times;</a>
+                    </div>
+                    <div class="indice_content2">
+                        <div class="i1">
+                            <img src="./sources/img/pp@2x.png" alt="">
+                            <div class="i11">
+                                <p class="th">Nombre</p>
+                                <p>Pedro Felipe Gómez Bonilla</p>
+                            </div>
+                        </div>
+                        <div class="i2">
+                            <p class="th">Correo</p>
+                            <p>*********@gmail.com</p>
+                            <p class="th">Contraseña</p>
+                            <p>*********</p>
+                            <a href="#"><button class="button2">Editar perfil</button></a>
+                            <a href="./index.html"><button class="button3">Log-Out</button></a>
+                        </div>
+                </div>
+        </div>
+    </div>
 </body>
 
 </html>
